--- a/public/css/dashboardPanel.css
+++ b/public/css/dashboardPanel.css
@@ -130,7 +130,7 @@ div.content{
   float: right;   
   min-height: 500px;
   border: 1px solid rgba(102, 45, 145, 0.7);
-  padding: 5px 0px 0px 15px;
+  padding: 5px 5px 5px 5px;
   background-color: #ece9e9;  
   color: #464547;
   text-shadow: none;
@@ -561,3 +561,121 @@ div.closePopUp{
   user-select: none;
 }
 
+.draggableTab {
+ font-size: 62.5%;
+}
+
+.addGadgetCol {
+  width: 100%;
+  height: 200px;
+  margin: auto;
+  padding-top: 10px;
+  background: #b3adc6;
+  border: 1px solid #bab9ba;
+  -webkit-box-shadow: rgba(0, 0, 0, .6) 0px 0px 2px;
+  -moz-box-shadow: rgba(0, 0, 0, .6) 0px 0px 2px;
+  box-shadow: rgba(0, 0, 0, .6) 0px 0px 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.addGadgetPane {
+  z-index: 1000;
+  position: absolute;
+  width: 135px;
+  height: 200px;
+  margin: auto;
+  left: 73%;
+  font-size: 75%;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  background: #b3adc6;
+  border: 1px solid #bab9ba;
+  -webkit-box-shadow: rgba(0, 0, 0, .6) 0px 0px 2px;
+  -moz-box-shadow: rgba(0, 0, 0, .6) 0px 0px 2px;
+  box-shadow: rgba(0, 0, 0, .6) 0px 0px 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+.gadgetsListInternal {
+  height: 165px;
+  overflow: auto;
+}
+
+.gadgetsListInternal li {
+  margin-right: 10px;
+}
+
+.gadgetsListInternal li:hover {
+  background: #c4bedd;
+  cursor: pointer;
+}
+
+.gadgetsListInternal li:active {
+  background: #b3adc6;
+  cursor: pointer;
+
+}
+
+.gadgetFrame {
+ margin-top: 0px;
+ margin-bottom: 0px;
+ padding: 0px;
+ border-style: none;
+ width: 100%;
+}
+
+.tabContentOuter {
+  padding: 0px !important;
+}
+
+.tabBar {
+  border-width: 0px !important;
+  border-bottom-right-radius: 0px !important; 
+  border-bottom-left-radius: 0px !important; 
+}
+
+.tabPane {
+  padding: 0px !important;
+  height: auto !important;
+  margin: 2px !important;
+  -webkit-box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px !important;
+  box-shadow: rgba(0, 0, 0, .3) 0px 0px 2px !important;
+}
+
+.addGadgetColFrame {
+  margin: 5px !important;
+}
+
+.addGadgetToPanelButton {
+  float: right;
+  position: relative;
+  margin-right: 4px;
+  margin-top: 4px;
+  width: 15px;
+  height: 15px;
+}
+
+.adjustPlusIcon {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+}
+
+.gadgetsListSmall {
+  height: 95px !important;
+  margin-left: -30px;
+}
+
+.addGadgetPaneSmall {
+  font-weight: normal;
+  height: 110px !important;
+}
+
+.closeGadgetSelectButton {
+  position: relative;
+  top: -5px;
+}
