--- a/templates/dashboardPanel.mustache
+++ b/templates/dashboardPanel.mustache
@@ -96,8 +96,8 @@
       </tr>
     </table>
   </body>
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
   <script src="/modernizr.custom.80028.js"></script>
   <script src="/underscore.js" type="text/javascript"></script>
   <script src="/backbone.js" type="text/javascript"></script>
