--- a/templates/dashboard.mustache
+++ b/templates/dashboard.mustache
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="/css/gadget.css">
 <link rel="stylesheet" href="/css/dashboard.css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
 <script src="/underscore.js" type="text/javascript"></script>
 <script src="/backbone.js" type="text/javascript"></script>
 <script src="/chat.js" type="text/javascript"></script>
